--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.ts",
+    "start": "tsc && node src/index.ts",
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -17,8 +19,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
