--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc && node src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "start": "tsc && node src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/jest": "^29.5.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
@@ -22,7 +26,9 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.3",
+    "@types/supertest": "^2.0.12",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   }
 }
